Implement indexed language pack export
Index Java lang resources as first-class mod resources, export Bedrock texts language files for generated packs, harden legacy content inventory cache records, and document validation status.